working through details

--- a/tvm1/help/help-index.html
+++ b/tvm1/help/help-index.html
@@ -15,35 +15,44 @@
 <body>
     <div class="container-fluid">
 
-            <div id="help5" class="slide help-slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">Help Me!</h3>
-                    </div>
+        <div id="" class="slide help-slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Help Me!</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>Put links to each of the math help pages with their description. All math links should like to this index page. or have a button back to the math index page</p>
-                            <ul>
-                                <li><a href="./help1-1.html">Help 1</a></li>
-                                <li><a href="./help1-2.html">Help 2</a></li>
-                                <li><a href="./help1-3.html">Help 3</a></li>
-                                <li><a href="./help1-4.html">Help 4</a></li>
-                                <li><a href="./help1-5.html">Help 5</a></li>
-                                <li><a href="./math-basics.html">Basic Math Refresher</a></li>
-                            </ul>
-                        </div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="../tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="../help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="../tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="../calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>Click on the question to see how to calculate the answer for that question or check the Basic Math Help page for a review of needed concepts.</p>
+                        <ul>
+                            <li>Basic Math Help: &nbsp;<a href="./math-basics.html">Math Concepts Refresher</a></li>
+                            <li>Example 1: &nbsp;<a href="./help1-1.html">How much money would you have in 1 year if you invested $100 at a rate of 10%?</a></li>
+                            <li>Example 2: &nbsp;<a href="./help1-2.html">How much money would you have in another year if you rolled over the $110 earned in the first year?</a></li>
+                            <li>Example 3: &nbsp;<a href="./help1-3.html">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</a></li>
+                            <li>Example 4: &nbsp;<a href="./help1-4.html">If you need to triple your investment in 10 years, what interest rate will you need?</a></li>
+                            <li>Example 5: &nbsp;<a href="./help1-5.html">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-1 offset-sm-1">
+                    <div class="page-number"></div>
+                </div>
+                <!-- <div class="offset-5 col-4 offset-md-6">
+                        <button type="button" class="hide btn"></button>
+                        <button type="button" class="btn"><a href="tvm1-2.html">Start!</a></button>
+                    </div> -->
+            </div>
+        </div>
 
     </div> <!--  end of container -->
 
@@ -54,7 +63,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="../tvm1-script.js"></script>
 </body>
 
 </html>
