--- a/tvm1/help/help1-1.html
+++ b/tvm1/help/help1-1.html
@@ -18,7 +18,7 @@
 
 
         <!---------------- help section 1 ********************** -->
-        <div id="help1" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -75,23 +75,18 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <button type="button" class="continue help btn">Help</button>
-                    <button type="button" class="skip btn pgUp">Continue</button>
+                    <button type="button" class="btn"></button>
+                    <button type="button" class="btn"></button>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-1">
                     <div class="page-number">help1</div>
                 </div>
             </div>
         </div>
-        <!---------------- end help section 1 ********************** -->
-
-
-
-
 
     </div> <!--  end of container -->
 
@@ -102,7 +97,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="../tvm1-script.js"></script>
 </body>
 
 </html>
