--- a/tvm1/help/help1-4.html
+++ b/tvm1/help/help1-4.html
@@ -15,10 +15,7 @@
 <body>
     <div class="container-fluid">
 
-
-
-        <!-- ******* help 4 ********************* -->
-        <div id="help4" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -37,35 +34,29 @@
                         <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
                         <p>Even though not all the numbers are listed in the problem, we can identify the time frame. Identifying FV and PV might be difficult since they aren't explicitly stated, however we know our future value will be 3 times our current value. This means we can use any current value for our calculation. To make it easy, use $1. This means our future value would be $3.</p>
                         <p>Remember: To find the reciprocal, turn the number into a fraction and then flip it over:
-                            <div class="math">
-                                <img src="./images/tvm1_reciprocal.png" alt="" class="img-fluid ">
-                            </div>
+                            <div><img src="../../images/tvm1_reciprocal.png" alt="" class="math"></div>
                         </p>
                         <p>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.</p>
-                        <div><img class="math" src="../images/variables2.svg"></div>
+                        <div><img class="math" src="../../images/variables2.svg"></div>
                         <p>Next, plug the numbers into the equation:</p>
-                        <div><img class="math" src="../images/replace-the-variables2.svg"></div>
+                        <div><img class="math" src="../../images/replace-the-variables2.svg"></div>
                         <p>Then solve for the unknown variable, which is i in this problem.</p>
                         <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent for now, because of the unknown variable.</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="btn">Back</button>
                     <button type="button" class="btn">Continue</button>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">help4</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-        <!-- ******* end help 4 ********************* -->
-
-
-
 
     </div> <!--  end of container -->
 
@@ -76,7 +67,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="../tvm1-script.js"></script>
 </body>
 
 </html>
