--- a/tvm1/help/help1-5.html
+++ b/tvm1/help/help1-5.html
@@ -15,8 +15,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <div id="help5" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -63,23 +62,23 @@
                             </li>
                             <li><b>MD</b>: To isolate n, divide both sides by (ln 1.09). Then solve for n.
                                 <div class="bottom-space">
-                                    <img src="./images/tvm1_basic_n_example_help4.png" class="img-fluid " alt="">
+                                    <img src="../images/tvm1_basic_n_example_help4.png" class="img-fluid " alt="">
                                 </div>
-                                <div><img class="math" src="../images/exponent-step.svg"></div>
+                                <div><img class="math" src="../../images/exponent-step.svg"></div>
                             </li>
                         </ol>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                <!-- <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="back btn">Back</button>
                     <button type="button" class="continue btn pgUp">Continue</button>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">help5</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
@@ -87,7 +86,7 @@
 
 
 
-    
+
     </div> <!--  end of container -->
 
 
@@ -97,7 +96,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="../tvm1-script.js"></script>
 </body>
 
 </html>
