--- a/tvm1/help/math-basics.html
+++ b/tvm1/help/math-basics.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <div id="refresher" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -85,11 +85,10 @@
                 </div> -->
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">Basics</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
@@ -100,7 +99,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="../tvm1-script.js"></script>
 </body>
 
 </html>
