--- a/tvm1/tvm1-5.html
+++ b/tvm1/tvm1-5.html
@@ -32,10 +32,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
+                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</p>
                         <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
                         <p class="answer">The answer is $110.</p>
-                        <p>Did you get the right answer? Click Help to learn how to calculate the answer.</p>
 
                     </div>
                 </div>
