--- a/tvm1/tvm1-7.html
+++ b/tvm1/tvm1-7.html
@@ -44,7 +44,7 @@
                                 </li>
                             </ul>
                         </p>
-                        <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV).</p>
+                        <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV). Click help if you need more help to solve this question.</p>
                     </div>
                 </div>
             </div>
