--- a/tvm1/help/help1-2.html
+++ b/tvm1/help/help1-2.html
@@ -18,7 +18,7 @@
 
 
         <!---------------- help section 2 ********************** -->
-        <div id="help2" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -58,10 +58,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                <!-- <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="back btn">Back</button>
                     <button type="button" class="continue btn pgUp">Continue</button>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-1">
@@ -69,10 +69,6 @@
                 </div>
             </div>
         </div>
-        <!---------------- end help section 2 ********************** -->
-
-
-
 
     </div> <!--  end of container -->
 
@@ -83,7 +79,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="../tvm1-script.js"></script>
 </body>
 
 </html>
