--- a/tvm1/help/help1-3.html
+++ b/tvm1/help/help1-3.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <div id="help3" class="slide help-slide">
+        <div id="" class="slide help-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -74,12 +74,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <button type="button" class="back btn">Back</button>
                     <button type="button" class="continue btn pgUp">Continue</button>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-1">
                     <div class="page-number"></div>
