--- a/tvm1/tvm1-16.html
+++ b/tvm1/tvm1-16.html
@@ -16,8 +16,7 @@
     <div class="container-fluid">
 
 
-
-        <div id="" class="slide stop">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
@@ -33,14 +32,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. </p>
-                        <p>When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
-                        <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
-                        <div><img class="math" src="../images/exponent-step.svg"></div>
-                        <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
-                        <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
-                        <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
-                        </div>
+                        <p>Answer this question:</p>
+                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
+                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
                     </div>
                 </div>
             </div>
@@ -52,10 +46,11 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">17</div>
+                    <div class="page-number">18</div>
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
