--- a/tvm1/tvm1-17.html
+++ b/tvm1/tvm1-17.html
@@ -32,9 +32,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Answer this question:</p>
                         <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
+                        <p class="answer">The answer is 11.612%.</p>
+                        <p>If you answered correctly, click Continue. If you answered incorrectly, click the Help button to calculate the answer.</p>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">18</div>
+                    <div class="page-number">19</div>
                 </div>
             </div>
         </div>
