--- a/tvm1/tvm1-6.html
+++ b/tvm1/tvm1-6.html
@@ -33,9 +33,8 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <p>Now apply the same process to roll over the loan for a second year. Some find this a little more complicated, but the steps are the same.</p>
+                        <p>Now apply the same process to roll over the loan for a second year. Some find this a little more complicated, but the steps are the same. Once you have the answer, click Continue. If you don't know how to calculate the answer, click Help.</p>
                         <p class="question">How much money would you have in another year if you rolled over the $110 earned in the first year?</p>
-                        <p>If you have the answer, click Continue. If you don't know how to calculate the answer, click Help.</p>
                     </div>
                 </div>
             </div>
