--- a/tvm1/tvm1-9.html
+++ b/tvm1/tvm1-9.html
@@ -35,7 +35,7 @@
                     <div class="content">
                         <h4>Example Exercise</h4>
                         <p class="question">What would the $100 investment be worth in 10 years at 10% interest?</p>
-                        <p>Instructions: Identify the variables in the question and input them into the blanks provided. Use a decimal for the interest variable.</p>
+                        <p>Instructions: Identify the variables in the question and input them into the blanks provided.</p>
 
                         <div class="container">
                             <div class="">
@@ -44,14 +44,14 @@
                                     <label>PV </label>
                                     <input id="PV" type="number" placeholder="0"><br>
 
-                                    <label>&nbsp;&nbsp;&nbsp;i </label>
-                                    <input id="i" type="number" placeholder=".00"><br>
+                                    <label style="padding-left:15px;">i </label>
+                                    <input id="i" type="number" placeholder="0"><br>
 
-                                    <label>&nbsp;&nbsp;n </label>
-                                    <input id="n" type="number" placeholder="0"><br>
+                                    <label style="padding-left: 10px;">n </label>
+                                    <input id="n" type="number" step="1" placeholder="0"><br>
 
+                                    <button id="ex1" type="button" class="btn calculate-btn">Calculate</button>
                                 </form>
-                                <button onclick="calc_FV()" type="button" class="btn calculate-btn">Calculate</button>
                             </div>
                             <div class="answer" id="answer"></div>
                         </div>
@@ -71,8 +71,6 @@
             </div>
         </div>
 
-
-
     </div> <!--  end of container -->
 
 
@@ -82,7 +80,7 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="./tvm1-script.js"></script>
 </body>
 
 </html>
